syntax = "proto3";
package com.stream.grpc;

option java_package="com.stream.grpc";

// Request payload
message DataRequest {
    bytes data = 1;
}

message DataResponse {
    string ack = 1;
    int32 elapsed = 2;
}

// Defining a Service, a Service can have multiple RPC operations
service GRpcService {
  // Define a RPC operation
  rpc sendData (stream DataRequest) returns (DataResponse);
}